Sistema de Colunas

--- a/index.html
+++ b/index.html
@@ -5,15 +5,57 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
     
-    
+    <style type="text/css">
+		.exemplo-cor{
+			background: #f9f9f9;
+			border: solid 1px #ddd;
+			margin-top:10px;
+			margin-bottom:10px;
+		}
+		.dark{
+			background: #000;
+			color: #fff;
+		}
+	</style>
+</head>  
 <body>
     <section>
 		<div style="border:solid 1px;height: 400px" class="container">
        <div class="row">
-        <div class="col" style="background:#ccc">
+        <div class="col exemplo-cor">
             coluna
         </div>
-        <div class="col" style="background:#ccc">
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
+            coluna
+        </div>
+        <div class="col exemplo-cor">
             coluna
         </div>
        </div>
