--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
             coluna
         </div>
        </div>
+       
+        <div class="row">
+            <div class="col-2 exemplo-cor">
+                coluna
+            </div>
+            <div class="col-5 exemplo-cor">
+                coluna
+            </div>
+            <div class="col-3 exemplo-cor">
+                coluna
+            </div>
+            <div class="col-2 exemplo-cor">
+                coluna
+            </div>
+            
+       </div>
         </div>
     </section>     
 </body>
