--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
             <div class="col-2 exemplo-cor">
                 coluna
             </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 exemplo-cor dark" >
+                Coluna
+            </div>
+            <div class="col-6 col-sm-4 col-md-6 col-lg-3 exemplo-cor dark" >
+                Coluna
+            </div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-7 exemplo-cor dark" >
+                Coluna
+            </div>
+        
             
        </div>
         </div>
