Alinhamento Vertical (rows)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>  
 <body>
     <section>
-		<div style="border:solid 1px;height: 400px" class="container">
+		<div style="border:solid 1px;height: 1000px" class="container">
        <div class="row">
         <div class="col exemplo-cor">
             coluna
@@ -100,7 +100,21 @@
             </div>
             
         </div>
+        <div class="row justify-content-evenly" style="min-height: 120px;border: solid blue">
+            <div class="col-2  exemplo-cor dark" >
+                Alinhamento Horizontal
+            </div>
+            <div class="col-2  exemplo-cor dark" >
+                Alinhamento Horizontal
+            </div>
+            <div class="col-2  exemplo-cor dark" >
+                Alinhamento Horizontal
+            </div>
+            <div class="col-2  exemplo-cor dark" >
+                Alinhamento Horizontal
+            </div>
             
+        </div>
        </div>
         </div>
     </section>     
