Alinhamento Vertical pela Coluna

--- a/index.html
+++ b/index.html
@@ -113,6 +113,23 @@
             <div class="col-2  exemplo-cor dark" >
                 Alinhamento Horizontal
             </div>
+        </div>
+
+            <div class="row justify-content-around" style="min-height: 120px;border: solid blue">
+				<div class="col-2  exemplo-cor dark" >
+					Alinhamento Horizontal
+				</div>
+				<div class="col-2  exemplo-cor dark" >
+					Alinhamento Horizontal
+				</div>
+				<div class="col-2  exemplo-cor dark" >
+					Alinhamento Horizontal
+				</div>
+				<div class="col-2  exemplo-cor dark" >
+					Alinhamento Horizontal
+				</div>
+				
+			</div>
             
         </div>
        </div>
