--- a/Seção 5 Formulários no Bootstrap 5/forms.html
+++ b/Seção 5 Formulários no Bootstrap 5/forms.html
@@ -12,13 +12,16 @@
 		<div class="container ">
 	<form>
 		<div class="col-4"> 
-			<div>
-			<label class="form-label">Seu Nome</label>
-			<input class="form-control" type="text" name="nome">
+			<div class="row">
+			<label class="form-label col-4">Seu Nome</label>
+			<div class="col-8">
+			<input value="William sarti" disabled class="form-cont
+			" type="text" name="nome">
+		</div>
 		</div>
 		<div>
-			<label class="form-label">Seu E-mail</label>
-			<input class="form-control" type="email" name="nome">
+			<label for="input-msg" class="form-label">Seu E-mail</label>
+			<input id="input-msg" class="form-control" type="email" name="nome">
 
 		</div>
 		<div>
