Tamanho dos Campos do Form

--- a/Seção 5 Formulários no Bootstrap 5/forms.html
+++ b/Seção 5 Formulários no Bootstrap 5/forms.html
@@ -21,7 +21,12 @@
 		</div>
 		<div>
 			<label for="input-msg" class="form-label">Seu E-mail</label>
-			<input id="input-msg" class="form-control" type="email" name="nome">
+			<input id="input-msg" class="form-control form-control-lg" type="email" name="nome">
+
+		</div>
+		<div>
+			<label for="input-msg" class="form-label">Seu E-mail</label>
+			<input id="input-msg" class="form-control form-control-sm" type="email" name="nome">
 
 		</div>
 		<div>
