--- a/Seção 5 Formulários no Bootstrap 5/forms.html
+++ b/Seção 5 Formulários no Bootstrap 5/forms.html
@@ -10,6 +10,41 @@
 <body>
 	<section>
 		<div class="container ">
+
+	<div class="row justify-content-center mt-3">
+		<div class="col-6">
+			<form name="formulario-teste" method="pos
+			" action="">
+		<div class="row mt-3">
+<label class="form-label" class="col-4">Nome:</label>
+	<div class="col-8">
+    <input  class="form-control" type="text" name="nome">
+	</div>
+	<div class="row mt-3">
+		<label class="form-label" class="col-4">E-mail::</label>
+			<div class="col-8">
+			<input  class="form-control" type="email" name="email">
+			</div>
+			<div class="row mt-3">
+				<label class="form-label" class="col-4">Envie seu Arquivo:</label>
+					<div class="col-8">
+					<input  class="form-control" type="file" name="file">
+					</div>
+
+		</div>
+		
+		<div class="row mt-3">
+			<label class="form-label" class="col-4">Selecione a cor:</label>
+				<div class="col-8">
+				<input  class="form-control form-control-color" type="color" name="color">
+				</div>
+
+	</div>
+		</form>
+		</div>
+	</div>
+	
+	<!--
 	<form>
 		<div class="col-4"> 
 			<div class="row">
@@ -35,7 +70,7 @@
 		</div>
 	</div>
 	</form>
-	
+-->
 	<!--
 	<form>
 		<div class="row"> 
