Datalist (lista de dados)

--- a/Seção 5 Formulários no Bootstrap 5/forms.html
+++ b/Seção 5 Formulários no Bootstrap 5/forms.html
@@ -40,9 +40,24 @@
 				</div>
 
 	</div>
-		</form>
+
+	<div class="row mt-3">
+		<label class="form-label col-4">Encontre seu curso:</label>
+		<div class="col-8">
+			<input list="listaCursos" class="form-control" name="cursos" placeholder="Escreva o nome do curso">
+
+			<datalist id="listaCursos">
+				<option value="HTML 5"></option>
+				<option value="HTML Básico"></option>
+				<option value="CSS 3"></option>
+				<option value="JS"></option>
+				<option value="PHP"></option>
+
+			</datalist>
 		</div>
 	</div>
+</form>
+
 	
 	<!--
 	<form>
