--- a/Seção 5 Formulários no Bootstrap 5/forms.html
+++ b/Seção 5 Formulários no Bootstrap 5/forms.html
@@ -56,6 +56,19 @@
 			</datalist>
 		</div>
 	</div>
+	<div class="row mt-3">
+		<label class="form-label col-4">Selecione o curso:</label>
+		<div class="col-8">
+			<select required class="form-select" >
+				<option value="">--Selecione--</option>
+				<option>HTML 5</option>
+				<option>CSS 3</option>
+				<option>JS</option>
+				<option>PHP</option>
+			</select>
+			
+		</div>
+	</div>
 </form>
 
 	
