--- a/Seção 5 Formulários no Bootstrap 5/forms.html
+++ b/Seção 5 Formulários no Bootstrap 5/forms.html
@@ -69,6 +69,19 @@
 			
 		</div>
 	</div>
+	<div class="row mt-3">
+		<label class="form-label col-4">Central de Notificações:</label>
+		<div class="col-8">
+			<div class="form-check ">							
+				<input id="promo" class="form-check-input" type="checkbox" name="not">
+				<label for="promo" class="form-check-label">Promoções</label>
+			</div>
+			<div class="form-check ">							
+				<input checked id="info" class="form-check-input" type="checkbox" name="info">
+				<label for="info" class="form-check-label">Informações úteis</label>
+			</div>								
+		</div>
+	</div>
 </form>
 
 	
