--- a/Seção 5 Formulários no Bootstrap 5/forms.html
+++ b/Seção 5 Formulários no Bootstrap 5/forms.html
@@ -40,7 +40,8 @@
 				</div>
 
 	</div>
-
+	
+	<!--Datalist (lista de dados) -->
 	<div class="row mt-3">
 		<label class="form-label col-4">Encontre seu curso:</label>
 		<div class="col-8">
@@ -56,6 +57,8 @@
 			</datalist>
 		</div>
 	</div>
+
+	<!--Select (campo de seleção) -->
 	<div class="row mt-3">
 		<label class="form-label col-4">Selecione o curso:</label>
 		<div class="col-8">
@@ -69,6 +72,8 @@
 			
 		</div>
 	</div>
+
+	<!--Checkbox (campos de checagem) -->
 	<div class="row mt-3">
 		<label class="form-label col-4">Central de Notificações:</label>
 		<div class="col-8">
@@ -82,6 +87,22 @@
 			</div>								
 		</div>
 	</div>
+         <!--RadioBox (campo de seleção única) -->
+	<div class="row mt-3">
+		<label class="form-label col-4">Gênero:</label>
+		<div class="col-8">
+			<div class="form-check form-check-inline">							
+				<input required class="form-check-input" type="radio" name="genero">
+				<label class="form-check-label">Masculino</label>
+			</div>
+			<div class="form-check form-check-inline">							
+				<input  id="fem" class="form-check-input" type="radio" name="genero">
+				<label for="fem" class="form-check-label">Feminimo</label>
+			</div>
+			
+		</div>
+	</div>
+	
 </form>
 
 	
